# tiforms

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: .env.local  pyproject.toml  requirements.txt
backend/app/: settings.py  urls.py
backend/dbal/: base_driver.py  connection.py  exceptions.py  ibmi_driver.py
backend/dbal/ibmi/: base.py  client.py  creation.py  features.py  introspection.py  operations.py  schema.py
backend/docker/: Dockerfile  entrypoint.sh  requirements.txt
backend/docker/nginx/: default.conf
backend/docker/odbc/: odbc.ini.template  odbcinst.ini
backend/forms/: apps.py  decorators.py  models.py  serializers.py  services.py  urls.py  views.py  views_submissions.py
backend/forms/listeners/: webhook_listeners.py
backend/forms/models/: forms.py  soporte_fomag.py
backend/forms/repositories/: base_repository.py  beneficiario_repository.py  consecutivos_recibos_repository.py
backend/forms/serializers/: forms.py
backend/forms/services/: beneficiario_service.py  consecutivos_recibos_service.py  uploaded_file.py
backend/forms/signals/: webhook_signals.py
backend/forms/tests/: test_signals_simple.py
backend/forms/utils/: db_helpers.py
backend/forms/views/: beneficiarios.py  consecutivos_recibos.py  documentos_usuarios_cme.py  forms.py  generic.py  health_check.py  mixins.py  submission_task_log.py  submissions.py  webhook_config.py
backend/sql/: sentences.sql
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/docker/: Dockerfile.dev  (+1 more)
nginx/: nginx.conf
(+12 files in other folders)
